<?xml version="1.0"?>
<package format="2">
  <name>sick_3vistort_driver</name>
  <version>0.0.1</version>
  <description>Open source driver for the SICK 3vistor-T 3d TOF camera.</description>

  <license>Apache License, Version 2.0 (http://www.apache.org/licenses/LICENSE-2.0)</license>

  <url type="website">http://wiki.ros.org/sick_3vistort_driver</url>

  <maintainer email="joshua.hampp@ipa.fraunhofer.de">Joshua Hampp</maintainer>
  <author email="joshua.hampp@ipa.fraunhofer.de">Joshua Hampp</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>sensor_msgs</depend>

</package>
