<?xml version="1.0"?>
<package format="2">

  <name>sick_visionary_t</name>

  <description>
    Open source driver for the SICK Visionary-T 3D TOF camera.
  </description>

  <version>0.0.4</version>
  <license>LGPL</license>

  <maintainer email="joshua.hampp@ipa.fraunhofer.de">Joshua Hampp</maintainer>
  <maintainer email="marco.dierschke@sick.de">Marco Dierschke</maintainer>
  
  <url>http://wiki.ros.org/sick_visionary_t_driver</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sick_visionary_t_driver</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
