<?xml version="1.0"?>
<package format="2">

  <name>sick_visionary_t</name>

  <description>
    Open source driver for the SICK Visionary-T 3D TOF camera.
  </description>

  <version>0.0.4</version>
  <license>Apache License, Version 2.0 (http://www.apache.org/licenses/LICENSE-2.0)</license>

  <maintainer email="joshua.hampp@ipa.fraunhofer.de">Joshua Hampp</maintainer>
  <maintainer email="marco.dierschke@sick.de">Marco Dierschke</maintainer>
  
  <url>http://wiki.ros.org/sick_visionary_t</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sick_visionary_t_driver</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
